tests/files/parser_tests/should_fail/082.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${x = 4}";
